--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.23.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
+    "swr": "^1.1.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
