--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "mongoose": "^6.1.6",
     "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^17.0.11",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
