--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.11",
+    "@types/node": "^16.11.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
