backend typescript works, adding backend tests

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
     "rootDir": "./src",
     "outDir": "./build",
     "esModuleInterop": true,
+    "strictNullChecks": false,
     "strict": true,
     "typeRoots": ["./global.d.ts", "../node_modules/@types"]
   },
