--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'server/src/test/*.test.js'"
   },
   "author": "",
   "license": "ISC",
@@ -20,11 +20,17 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mocha": "^9.1.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.7",
+    "@types/supertest": "^2.0.11",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0",
+    "supertest": "^6.2.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
