--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.23.0",
     "react-router-dom": "5.3.0",
